fixed white space on iPhone 11 viewport

--- a/css/index_style.css
+++ b/css/index_style.css
@@ -117,7 +117,16 @@ footer img  {
     
 }
 /* Mobile View (iphone 11)*/
-@media (min-width: 414px) {
+@media (min-width: 414px) and (min-height: 816px) {
+    /*  Fix for white space -> start  */
+    html,body {
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        padding: 0;
+        overflow-x: hidden;
+    }
+    /*  Fix for white space -> end  */
     #main {
         background-color: rgb(0, 183, 255);
         width: 100%;
